--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="og:description" content="The best restaurent in the city. Open Monday to Saturday, 9 to 12, in the Great Lake area." />
+    <meta name="og:title" content="Little Lemon" />
+    <meta name="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.littlelemon.ie%2F&psig=AOvVaw0yI-UX_PihoK24EMtonHKv&ust=1721045763027000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLDpsZ3BpocDFQAAAAAdAAAAABAE" />
+
     <title>Little Lemon</title>
 </head>
 <body>
